--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col py-5">
-                            <p class="display-6 p-1 text-black">El rol de un buen diseñador es anticiparse, como buen anfitrión lo hace con las necesidades de sus invitados. — Charles Eames</p>
+                            <p class="display-6 p-1 text-black">„Lo que nadie le dice a las personas que son principiantes, y realmente desearía que alguien me lo hubiera dicho a mí... es que todos los que hacemos un trabajo creativo, lo hacemos porque tenemos buen gusto. Pero existe esta brecha. Durante los primeros dos años haces cosas, y no son tan buenas. Intenta ser bueno, tiene potencial, pero no lo es. — Ira Glass</p>
                         </div>
                     </div>
                 </div>
